--- a/src/main/resources/fenix-framework-jvstm-ojb.properties
+++ b/src/main/resources/fenix-framework-jvstm-ojb.properties
@@ -1,7 +1,7 @@
 # using special INFER_APP_NAME to do just that
 appName=INFER_APP_NAME
 
-dbAlias=//localhost:3306/phonebook?useUnicode=true&amp;characterEncoding=UTF-8&amp;clobCharacterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
+dbAlias=//localhost:3306/airlineflightsmanagement?useUnicode=true&amp;characterEncoding=UTF-8&amp;clobCharacterEncoding=UTF-8&amp;zeroDateTimeBehavior=convertToNull
 dbUsername=root
 dbPassword=rootroot
 updateRepositoryStructureIfNeeded=true
